# sisyphus-riscv

./: .gitignore  CLAUDE.md  CMakeLists.txt  Optimazation.md  README.md  sl1.s  sl1_gcc.s  sl1_our_bin  sort1.c  sort1.s  sort1_gcc_bin  sort1_o1.s  sort1_o1_bin  test.py  test_alias.sy
docker/: compiler-dev-dual.Dockerfile
docs/: Commands.md  Compliance.md  Design.md  MLIRRoadmap.md  Optimization.md  Requirements.md  SysY.md  goal.md
docs/performance/: IMPLEMENTATION_ROADMAP.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  QUICK_REFERENCE.md  README.md  TEST_CASE_ANALYSIS.md
docs/superpowers/: status.md
scripts/: build.sh  eval-custom.sh  eval-riscv-hotspots.sh  eval-runtime.sh  eval-self-mlir-perf-baseline.sh  gen-custom-sysy2022.sh  gen-op-descriptors.py  regression.sh  run_analysis_manager_tests.sh  run_arm_o2_fft_regressions.sh  run_bitwise_arith_tests.sh  run_compliance_tests.sh  run_compliant_replacements_tests.sh  run_cvp_tests.sh  run_deep_optimization_tests.sh  run_dialect_conversion_tests.sh  run_frontend_regressions.sh  run_loop_rotate_tests.sh  run_memoryssa_tests.sh  run_mir_legalizer_tests.sh  run_mlir_core_tests.sh  run_mlir_infra_tests.sh  run_native_riscv_runtime_smoke.sh  run_polyhedral_tests.sh  run_proven_bitwise_tests.sh  run_regalloc_hotness_tests.sh  run_riscv_perf_compile_guardrails.sh  run_riscv_perf_regression.sh  run_riscv_targeted_correctness_tests.sh  run_scev_tests.sh  run_smoke.sh  run_smt_shift_tests.sh  run_vectorize_tests.sh  suite-index.sh  suite-sync.sh  verify_official_paths_and_hashes.sh
src/arm/: ArmDCE.cpp  ArmOps.h  ArmPasses.h  Dump.cpp  Legalize.cpp  Lower.cpp  RegAlloc.cpp  RegPeephole.cpp  Schedule.cpp  StrengthReduct.cpp
src/cfg/: CFGToLegacy.cpp  HIRToCFG.cpp
src/codegen/: Attrs.cpp  Attrs.h  CodeGen.cpp  OpBase.cpp  OpBase.h  Ops.h
src/frontend/: FrontendFacade.h
src/hir/: AffineNestAnalysis.cpp  AffineNestAnalysis.h  HIRAffine.cpp  HIRAffine.h  HIRCanonicalize.cpp  HIRCanonicalize.h  HIRPolyDetail.cpp  HIRPolyDetail.h  HIRPolyInterchange.cpp  HIRPolyReduction.cpp  HIRPolyTilingFusion.cpp  HIRPolyhedral.cpp  HIRPolyhedral.h  README.md
src/ir/: BlockArgumentBridge.cpp  BlockArgumentBridge.h  DialectConversion.cpp  DialectConversion.h  GeneratedOpClasses.inc  GeneratedOpDescriptors.inc  IRContext.cpp  IRContext.h  ODS.cpp  ODS.h  OpDescriptor.cpp  OpDescriptor.h  Operation.cpp  Operation.h  OperationInterfaces.h  op_schema.yml
src/main/: DefaultTarget.h  Options.cpp  Options.h  PipelineProfiles.cpp  PipelineProfiles.h  main.cpp
src/mlir/: ASTToMLIR.cpp  ASTToMLIR.h  IPO.cpp  IPO.h  Polyhedral.cpp  Polyhedral.h  SelfMLIR.cpp  SelfMLIR.h  SelfMLIRCore.cpp  SelfMLIRInternal.h  SelfMLIRNative.cpp  SelfMLIROpt.cpp  SelfMLIRRewrite.cpp  SelfMLIRSupport.cpp  SelfMLIRTests.cpp  SelfMLIRText.cpp  canonicalize.drr
src/opt/: AddressRecurrence.cpp  AdvancedConv2DTransform.cpp  AdvancedConv2DTransform.h  AggressiveDCE.cpp  Alias.cpp  Analysis.h  AnalysisManager.cpp  AnalysisManager.h  ArrayStrideAnalysis.cpp  BlockFrequency.cpp  BooleanMatrixRecurrenceFastPath.cpp  BoundsCheck.cpp  Cached.cpp  CleanupPasses.h  ConstArgSpecialize.cpp  DAE.cpp  DCE.cpp  DLE.cpp  DSE.cpp  DataLayout.cpp  DataLayout.h  DeadGlobalStore.cpp  DivPow2LoopFold.cpp  FlattenCFG.cpp  FunctionEquivalence.cpp  FunctionSummary.cpp  GCM.cpp  GVN.cpp  HierarchicalTiling.cpp  IPConstProp.cpp  Inline.cpp  InlineStore.cpp  InstSchedule.cpp  LICM.cpp  LateInline.cpp  LatencyThroughputModeling.cpp  LoopAnalysis.cpp  LoopDependenceAnalyzer.h  LoopFusionAfterTiling.cpp  LoopInterchange.cpp  (+73 more)
src/parse/: ASTNode.h  Parser.cpp  Parser.h
src/pass/: PassRegistry.h  README.md
src/pre-opt/: LoweredTCO.cpp
src/rv/: Dump.cpp  InstCombine.cpp  Legalize.cpp  Lower.cpp  RegAlloc.cpp  RegPeephole.cpp  Regs.h  RvAttrs.h  RvDCE.cpp  RvOps.h  RvPasses.h  Schedule.cpp  StrengthReduct.cpp  SuperblockSchedule.cpp
src/utils/: Exec.cpp  Exec.h  Matcher.cpp
tests/bitwise_arith/: nonnegative_pow2_ops.sy  runtime_nonnegative_pow2_ops.sy  signed_pow2_ops.sy
tests/compliance/: final_iteration_memory_accum_negative.sy  synth_const_array_dynamic_init.sy  synth_const_array_dynamic_mod.sy  synth_const_array_dynamic_mutable_negative.sy  synth_const_array_mutable_negative.sy  synth_const_array_nonformula_negative.sy  synth_const_array_positive.sy
tests/compliant_replacements/: const_array_scalar_replace.sy  (+1 more)
(+91 files in other folders)
